--- a/sistemas-ciberfisicos.html
+++ b/sistemas-ciberfisicos.html
@@ -85,13 +85,10 @@
                         </div>
                     </div>
 
-                    <div class="project-card-detail not-finished">
+                    <div class="sub-project-card">
                         <h3>Projeto Final: Soluções para o Mundo</h3>
-                        <p class="status-message">
-                            Este projeto está atualmente em desenvolvimento. Estamos trabalhando para criar uma solução inovadora com Arduino que gere um impacto positivo, como um sistema de monitoramento ambiental ou uma automação residencial para eficiência energética.
-                        </p>
-                        <p class="no-link-message">
-                            <i class="fas fa-exclamation-triangle"></i>  Detalhes e acesso ao projeto serão disponibilizados assim que for concluído!
+                        <p>
+                            Neste projeto, desenvolvemos com o uso do Arduino uma solução inovadora: um sistema capaz de identificar medições de terremotos e acionar alertas preventivos. Ao detectar o risco, o dispositivo envia notificações para celulares e ativa uma sirene, avisando a população da cidade sobre a iminência do terremoto e a necessidade de se preparar adequadamente.
                         </p>
                     </div>
                 </div>
