--- a/experiencia-criativa.html
+++ b/experiencia-criativa.html
@@ -59,7 +59,7 @@
                     </div>
                 </div>
 
-                <div class="project-card-detail not-finished">
+                <div class="project-card-detail">
                     <h2>3º Projeto: Página Web Informativa (Dieta e Nutrição)</h2>
                     <p>
                         Este projeto visava a criação de uma página web informativa sobre dieta e nutrição. Embora não tenha 
@@ -72,12 +72,14 @@
                         <li>Aprendizados: Foco na estrutura de conteúdo informativo, design responsivo e acessibilidade.</li>
                     </ul>
                     <div class="project-links">
-                        <span class="no-link-message">
-                            <i class="fas fa-exclamation-triangle"></i> Projeto não disponível para visualização.
-                        </span>
+                        <a href="https://dkiki45.github.io/Project-Diet-for-Life/" target="_blank" class="project-button">
+                            <i class="fas fa-chalkboard"></i> Ver Site 
+                        </a>
+                         <a href="https://www.canva.com/design/DAGnoVJBkN0/eBpG3SEaUe9zU9zk8hwltA/view?utm_content=DAGnoVJBkN0&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h542907b9ef" target="_blank" class="project-button">
+                            <i class="fas fa-file-powerpoint"></i> Ver Apresentação (Canva)
+                        </a>
                     </div>
                 </div>
-
             </div> <a href="index.html" class="back-button">Voltar para a Página Inicial</a>
         </section>
     </main>
