--- a/experiencia-criativa.html
+++ b/experiencia-criativa.html
@@ -75,7 +75,7 @@
                         <a href="https://dkiki45.github.io/Project-Diet-for-Life/" target="_blank" class="project-button">
                             <i class="fas fa-chalkboard"></i> Ver Site 
                         </a>
-                         <a href="https://www.canva.com/design/DAGnoVJBkN0/eBpG3SEaUe9zU9zk8hwltA/view?utm_content=DAGnoVJBkN0&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h542907b9ef" target="_blank" class="project-button">
+                         <a href="https://www.canva.com/design/DAGqcQ2ny18/-kF0ho4kPOawgqbUWouIgQ/view?utm_content=DAGqcQ2ny18&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h37998f6d6d">
                             <i class="fas fa-file-powerpoint"></i> Ver Apresentação (Canva)
                         </a>
                     </div>
